--- a/style.css
+++ b/style.css
@@ -1,11 +1,1 @@
-/*
-
-Theme Name: Your Theme Name
-There URI: www.example.com
-Author: Code the Change Foundation
-Author URI: http://codethechange.ca
-Description: A custom theme starter template for Code the Change Foundation
-Version: 1.0.0
-Text Domain: startertheme
-
-*/
+.footer{position:absolute;left:0%;right:0%;top:0%;bottom:0%}.footer{width:100%;height:80px;background-color:#2c3e50}.flex-container{text-align:center}.footer .flex-container p{color:#fff}.footer .flex-container a{text-decoration:none;color:#fff}/*# sourceMappingURL=style.css.map */
