--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,13 @@ $background-color: #2C3E50;
 }
 
 .footer .flex-container p{
-color:white;
+color:#F8F9FA;
+font-family: Lato;
+font-style: normal;
+font-weight: normal;
+line-height: 24px;
+font-size: 16px;
+
 }
 
 .footer .flex-container a{
