--- a/style.css
+++ b/style.css
@@ -9,3 +9,46 @@ Version: 1.0.0
 Text Domain: startertheme
 
 */
+.bg-primary {
+  background-color: #2C3E50 !important;
+}
+
+.navbar-light .navbar-nav a.nav-link {
+  margin: 4px;
+  padding: 5px 20px 5px 20px;
+  color: #FFFFFF;
+}
+
+.navbar-light .navbar-nav a.nav-link:hover {
+  color: white;
+  text-decoration: underline;
+  text-decoration-color: #9CE9F3;
+  text-underline-position: under;
+}
+
+.navbar-light .navbar-nav .active > .nav-link {
+  color: #FFFFFF;
+  text-decoration: underline;
+  text-decoration-color: #9CE9F3;
+  text-underline-position: under;
+}
+
+.img-responsive {
+  width: 83.6px;
+  height: 76px;
+}
+
+a:not([href]):not([tabindex]) {
+  color: #FFFFFF;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+a:not([href]):not([tabindex]):hover {
+  color: #FFFFFF;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+
+/*# sourceMappingURL=style.css.map */
